# medication-management

./: .dockerignore  .env.example  .env_local_container.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  mypy.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 00ed513e4dbc_first_init.py  3c4fe585dd0a_init.py  7f7737e9b336_init.py
src/: main.py  routers.py
src/celery_tasks/: tasks.py
src/core/: api_client.py  celery_connect.py  config.py  connector_for_alembic_and_alchemy.py  database.py  exceptions.py  postgres_connect.py  redis_connect.py  repository.py
src/drug_regimen/: buttons.py  dependencies.py  handlers.py  models.py  repository.py  service.py  state_machine.py  utils.py
src/drug_regimen_manager/: dependencies.py  handlers.py  requests.py  service.py  state_machine.py
src/event/: service.py  setup.py
src/service_handlers/: __init__.py  handlers.py
src/tasks/: tasks.py
src/user/: dependencies.py  models.py  repository.py  requests.py  service.py
src/utils/: buttons.py  delete_image.py  validate_user_message.py
