[project]
name = "bot-medication-management"
version = "0.1.0"
description = "bot medication management"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aio-pika>=9.4.3",
    "aiogram>=3.15.0",
    "httpx>=0.27.2",
    "pika>=1.3.2",
    "python-dotenv>=1.0.1",
    "redis>=5.2.0",
]


[project.optional-dependencies]
# cli = ["ruff>=0.6.4"]

[tool.uv]
dev-dependencies = ["mypy>=1.13.0", "pre-commit>=4.0.1", "ruff>=0.7.3"]

[tool.uv.sources]
src = { workspace = true }
scripts = { workspace = true }

[tool.uv.workspace]
members = ["webserver/*"]
exclude = ["webserver/seeds"]

[project.scripts]


[tool.ruff]
line-length = 135
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py312"
select = ["E", "W", "F", "B", "I", "Q", "COM"]
fixable = ["I", "W", "COM", "Q"]
flake8-quotes.inline-quotes = "double"
flake8-quotes.docstring-quotes = "double"
ignore = ["D100", "B904"]
exclude = [
    "settings.py",
    "manage.py",
    "migrations",
    "__init__.py",
    ".cache",
    "__pycache__",
    "infra",
    "nginx",
    ".vscode",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "env.py",
    "versions",
    "migrations",
]

[tool.ruff.per-file-ignores]
"src/settings.py" = ["E501"]

[tool.ruff.pydocstyle]
convention = "google"
